--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   <p>
  fruit and veg! pulses and legumes! yummy;)
   </p>
-  </body>
   <div class="boxed">
 Recipe number 1!!!
-    </div>
+  </div>
+  .boxed {
+  border: 1px solid green ;
+}
+    </body>
   </html>
