--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 Recipe number 1!!!
   </div>
   <div class="jumbotron">
-    <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <h1 class="display-4">Healthy Recipes!</h1>
+    <p class="lead">Being students ourselves, we know how hard it is to eat healthily, but don't worry, Chloe and Ziya will make sure you are always eating healthy and never hungry!!! </p>
     <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <p></p>
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </div>
     </body>
