--- a/index.html
+++ b/index.html
@@ -23,5 +23,12 @@ Recipe number 1!!!
     <p></p>
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </div>
+  <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
+  <div class="card-header">Header</div>
+  <div class="card-body">
+    <h5 class="card-title">Info card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
     </body>
   </html>
