--- a/index.html
+++ b/index.html
@@ -9,26 +9,42 @@
   <title> Clean Chef </title>
   </head>
   <body>
-  <h1> Healthy recipes!</h1>
-  <p>
- fruit and veg! pulses and legumes! yummy;)
-  </p>
-  <div class="boxed">
-Recipe number 1!!!
-  </div>
-  <div class="jumbotron">
-    <h1 class="display-4">Healthy Recipes!</h1>
-    <p class="lead">Being students ourselves, we know how hard it is to eat healthily, but don't worry, Chloe and Ziya will make sure you are always eating healthy and never hungry!!! </p>
-    <hr class="my-4">
-    <p></p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-  </div>
-  <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
-  <div class="card-header">Header</div>
-  <div class="card-body">
-    <h5 class="card-title">Info card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-</div>
+    <div class="container">
+      <h1> Healthy recipes!</h1>
+      <p>
+     fruit and veg! pulses and legumes! yummy;)
+      </p>
+      <div class="boxed">
+    Recipe number 1!!!
+      </div>
+      <div class="jumbotron">
+        <h1 class="display-4">Healthy Recipes!</h1>
+        <p class="lead">Being students ourselves, we know how hard it is to eat healthily, but don't worry, Chloe and Ziya will make sure you are always eating healthy and never hungry!!! </p>
+        <hr class="my-4">
+        <p></p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      </div>
+      <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
+      <div class="card-header">Header</div>
+      <div class="card-body">
+        <h5 class="card-title">Info card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+    <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
+    <div class="card-header">Header</div>
+    <div class="card-body">
+      <h5 class="card-title">Info card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+    </div>
+    <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
+    <div class="card-header">Header</div>
+    <div class="card-body">
+      <h5 class="card-title">Info card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+    </div>
+    </div>
     </body>
   </html>
