--- a/index.html
+++ b/index.html
@@ -10,39 +10,74 @@
   </head>
   <body>
     <div class="container">
-      <h1> Healthy recipes!</h1>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">ENTREES</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">MAINS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">DESSERTS</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
       <p>
-     fruit and veg! pulses and legumes! yummy;)
+
       </p>
       <div class="boxed">
-    Recipe number 1!!!
+
       </div>
       <div class="jumbotron">
         <h1 class="display-4">Healthy Recipes!</h1>
-        <p class="lead">Being students ourselves, we know how hard it is to eat healthily, but don't worry, Chloe and Ziya will make sure you are always eating healthy and never hungry!!! </p>
+        <p class="lead">Welcome to our blog!
+          Happy Monday everyone! Today's recipe is available below. We will be posting new recipes everyday so don't forget to check for updates!
+Enjoy,
+Chloe and Ziya xxx
+         </p>
         <hr class="my-4">
         <p></p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
       </div>
-      <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
-      <div class="card-header">Header</div>
+      <div class="card text-white bg-info mb-3" style="max-width: 58rem;">
+      <div class="card-header">Entrée</div>
       <div class="card-body">
-        <h5 class="card-title">Info card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h5 class="card-title">Egg salad recipe</h5>
+        <p class="card-text">
+          1. Bring a pan of water to the boil, lower in the eggs and boil for 8 mins. Drain and run under the cold tap to cool them a little, then peel and halve. Meanwhile, mix 1 tbsp lemon juice and 3 tbsp water with the tahini to make a dressing.
+
+
+
+          2. Heat the oil and fry the onion and garlic for 5 mins to soften them. Add the ground cumin and seeds, stir briefly then add the beans and lightly crush some of them as you heat them, adding some of the juice from the can to get a nice creamy consistency but keeping whole beans, too. Taste and add lemon juice and just a little seasoning if you need to.
+
+
+          3. Spoon the beans on to plates with the lettuce, then add the eggs and tomatoes, with the tahini dressing, chilli and parsley, if using.</p>
       </div>
     </div>
-    <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
-    <div class="card-header">Header</div>
+    <div class="card text-white bg-info mb-3" style="max-width: 58rem;">
+    <div class="card-header">Main</div>
     <div class="card-body">
-      <h5 class="card-title">Info card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <h5 class="card-title">Mexican bean soup with guacamole</h5>
+      <p class="card-text"> 1. Heat the oil in a medium pan, add the onion (reserving 1 tbsp to make the guacamole later) and pepper and fry, stirring frequently, for 10 mins. Stir in the garlic and spices, then tip in the tomatoes and beans with their liquid, half a can of water and the bouillon powder. Simmer, covered, for 15 mins.
+
+2. Meanwhile, peel and de-stone the avocado and tip into a bowl, add the remaining onion, coriander and lime juice with a little chilli (if using) and mash well. Ladle the soup into two bowls, top with the guacamole and serve.</p>
     </div>
     </div>
-    <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
-    <div class="card-header">Header</div>
+    <div class="card text-white bg-info mb-3" style="max-width: 58rem;">
+    <div class="card-header">Dessert</div>
     <div class="card-body">
-      <h5 class="card-title">Info card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <h5 class="card-title">Berry banana slush</h5>
+      <p class="card-text">Slice the bananas into a bowl and add the frozen berry mix. Blitz with a stick blender to make a slushy ice and serve straight away in two glasses with spoons.</p>
     </div>
     </div>
     </div>
