--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@ Chloe and Ziya xxx
 
 
           3. Spoon the beans on to plates with the lettuce, then add the eggs and tomatoes, with the tahini dressing, chilli and parsley, if using.</p>
+          ​<picture>
+            <img src="egyptian-egg-salad.jpg" alt="...">
+          </picture>
       </div>
     </div>
     <div class="card text-white bg-info mb-3" style="max-width: 58rem;">
@@ -71,6 +74,9 @@ Chloe and Ziya xxx
       <p class="card-text"> 1. Heat the oil in a medium pan, add the onion (reserving 1 tbsp to make the guacamole later) and pepper and fry, stirring frequently, for 10 mins. Stir in the garlic and spices, then tip in the tomatoes and beans with their liquid, half a can of water and the bouillon powder. Simmer, covered, for 15 mins.
 
 2. Meanwhile, peel and de-stone the avocado and tip into a bowl, add the remaining onion, coriander and lime juice with a little chilli (if using) and mash well. Ladle the soup into two bowls, top with the guacamole and serve.</p>
+​<picture>
+  <img src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe/recipe-image/2016/12/wdp-lunch-mexicanguacamolesoup_02051.jpg?itok=FT8ioSx_" alt="...">
+</picture>
     </div>
     </div>
     <div class="card text-white bg-info mb-3" style="max-width: 58rem;">
@@ -78,6 +84,9 @@ Chloe and Ziya xxx
     <div class="card-body">
       <h5 class="card-title">Berry banana slush</h5>
       <p class="card-text">Slice the bananas into a bowl and add the frozen berry mix. Blitz with a stick blender to make a slushy ice and serve straight away in two glasses with spoons.</p>
+      ​<picture>
+        <img src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe/recipe-image/2016/05/instant-berry-banana-slush.jpg?itok=JgfQxhtx" alt="...">
+      </picture>
     </div>
     </div>
     </div>
